--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                             <p class="value-title ml-4 ml-lg-0 mt-3">Estimates</p>
                         </div>
                       </div>
-                      <div class="card__face card__face--back px-4 mt-0 d-flex justify-content-center align-items-center">
-                          <p class="card-back-text text-center">we will first inspect your rug and give you a free estimate. </p>
+                      <div class="card__face card__face--back  mt-0 d-flex justify-content-center align-items-center p-5 p-md-3">
+                          <p class="card-back-text text-center mt-3">we will first inspect your rug and give you a free estimate. </p>
                       </div>
                     </div>
                 </div>
@@ -145,8 +145,8 @@
                             <p class="value-title ml-4 ml-lg-0 mt-3">& Delivery</p>
                         </div>
                       </div>
-                      <div class="card__face card__face--back px-4 mt-0 d-flex justify-content-center align-items-center">
-                          <p class="card-back-text text-center">we will pick your rug from your house and place it where it was after the cleaning</p>
+                      <div class="card__face card__face--back  mt-0 d-flex justify-content-center align-items-center p-5 p-md-3">
+                          <p class="card-back-text text-center mt-3">we will pick your rug from your house and place it where it was after the cleaning</p>
                       </div>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
                             <p class="value-title ml-4 ml-lg-0 mt-3">Of Experience</p>
                         </div>
                       </div>
-                      <div class="card__face card__face--back px-4 mt-0 d-flex justify-content-center align-items-center">
-                          <p class="card-back-text text-center">every rug cleaning process is different based on its type. Our experienced experts know how to completely taking care of your rug</p>
+                      <div class="card__face card__face--back  mt-0 d-flex justify-content-center align-items-center p-3 p-md-3">
+                          <p class="card-back-text text-center mt-3">every rug cleaning process is different based on its type. Our experienced experts know how to completely taking care of your rug</p>
                       </div>
                     </div>
                 </div>
@@ -175,8 +175,8 @@
                             <p class="value-title ml-4 ml-lg-0 mt-3">Technicians</p>
                         </div>
                       </div>
-                      <div class="card__face card__face--back px-4 mt-0 d-flex justify-content-center align-items-center">
-                          <p class="card-back-text text-center">Our highly trained technicians know how to treat your rug the best way.</p>
+                      <div class="card__face card__face--back  mt-0 d-flex justify-content-center align-items-center p-5 p-md-3">
+                          <p class="card-back-text text-center mt-3">Our highly trained technicians know how to treat your rug the best way.</p>
                       </div>
                     </div>
                 </div>
@@ -194,8 +194,8 @@
                             <p class="value-title ml-4 ml-lg-0 mt-3">& Insured</p>
                         </div>
                       </div>
-                      <div class="card__face card__face--back px-4 mt-0 d-flex justify-content-center align-items-center">
-                          <p class="card-back-text text-center">Khazai Rug Cleaning guarantees that the process of cleaning your rug is flawless. </p>
+                      <div class="card__face card__face--back  mt-0 d-flex justify-content-center align-items-center p-5 p-md-3">
+                          <p class="card-back-text text-center mt-3">Khazai Rug Cleaning guarantees that the process of cleaning your rug is flawless. </p>
                       </div>
                     </div>
                 </div>
