--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="col-12 d-flex row align-items-center flex-lg-row justify-content-center  mt-lg-2 mt-4">
                 <div class="scene p-0 col-8 col-md-2 mt-4 mt-md-0 ml-md-3">
                     <div class="card">
-                      <div class="card__face card__face--front d-flex align-items-center justify-content-between flex-md-column justify-content-md-center px-4 mt-0">
+                      <div class="card__face card__face--front d-flex align-items-center justify-content-around flex-md-column justify-content-md-center px-4 mt-0">
                         <img src="assets/Free estimate.svg" alt="free_estimate" class="value-logo">
                         <div class="text-center mt-1">
                             <p class="value-title ml-4 ml-lg-0 mt-3 ">FREE</p>
@@ -138,7 +138,7 @@
 
                 <div class="scene p-0 col-8 col-md-2 mt-4 mt-md-0 ml-md-3">
                     <div class="card">
-                      <div class="card__face card__face--front d-flex align-items-center justify-content-between flex-md-column justify-content-md-center px-4 mt-0">
+                      <div class="card__face card__face--front d-flex align-items-center justify-content-around  flex-md-column justify-content-md-center px-4 mt-0">
                         <img src="assets/Free pickup.svg" alt="free_estimate" class="value-logo">
                         <div class="text-center mt-md-2 ">
                             <p class="value-title ml-4 ml-lg-0 mt-3 ">FREE Pickup</p>
@@ -153,7 +153,7 @@
 
                 <div class="scene p-0 col-8 col-md-2 mt-4 mt-md-0 ml-md-3">
                     <div class="card">
-                      <div class="card__face card__face--front d-flex align-items-center justify-content-between flex-md-column justify-content-md-center px-4 mt-0">
+                      <div class="card__face card__face--front d-flex align-items-center justify-content-around  flex-md-column justify-content-md-center px-4 mt-0">
                         <img src="assets/30 years.svg" alt="free_estimate" class="value-logo">
                         <div class="text-center mt-md-2 ">
                             <p class="value-title ml-4 ml-lg-0 mt-3 ">30 Years</p>
@@ -168,7 +168,7 @@
 
                 <div class="scene p-0 col-8 col-md-2 mt-4 mt-md-0 ml-md-3">
                     <div class="card">
-                      <div class="card__face card__face--front d-flex align-items-center justify-content-between flex-md-column justify-content-md-center px-4 mt-0">
+                      <div class="card__face card__face--front d-flex align-items-center justify-content-around  flex-md-column justify-content-md-center px-4 mt-0">
                         <img src="assets/certified technicians.svg" alt="free_estimate" class="value-logo">
                         <div class="text-center mt-md-2 ">
                             <p class="value-title ml-4 ml-lg-0 mt-3 ">CERTIFIED</p>
@@ -187,7 +187,7 @@
                 
                 <div class="scene p-0 col-8 col-md-2 mt-4 mt-md-0 ml-md-3">
                     <div class="card">
-                      <div class="card__face card__face--front d-flex align-items-center justify-content-between flex-md-column justify-content-md-center px-4 mt-0">
+                      <div class="card__face card__face--front d-flex align-items-center justify-content-around  flex-md-column justify-content-md-center px-4 mt-0">
                         <img src="assets/Fully Licenced.svg" alt="free_estimate" class="value-logo">
                         <div class="text-center mt-md-2">
                             <p class="value-title ml-4 ml-lg-0 mt-3 ">Fully Licenced</p>
