--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                 <h5>all health protocols</h5>
                             </div>
                             <div class="mt-3">
-                                <p>Here at Khazai Rug’s/Cleaning we take your safety as well as our employees very
+                                <p>Here at Khazai Rug Cleaning we take your safety as well as our employees very
                                     seriously during this time of crisis. We still strive to provide exceptional
                                     customer satisfaction when cleaning your rug and that will not change even with
                                     uncertainty regarding COVID-19. But, with that being said we would like to outline
