--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                                     class="col-12 d-flex flex-column flex-md-row justify-content-center align-content-center mt-4 mb-0">
                                     <button type="submit" class="modal-btn col-12  p-2 py-3" id="submit-form">Schedule a free
                                         pickup</button>
+                                        
                                     <div class="call">
                                         <a href="tel:+1 (502) 327-1499"
                                             class="callToEstimate p-2 text-center mt-3 py-3 d-flex align-content-center justify-content-center"><span
@@ -535,7 +536,9 @@
                                                 call
                                             </span>CALL TO GET ESTIMATE</a>
                                     </div>
-
+                                    <div class="alert alert-success modal-alert col-12 mt-2 text-center" role="alert" id="modal-alert">
+                                                                                your information has been sent!
+                                    </div>
                                 </div>
 
                             </div>
