--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                                 </div>
 
                                 <div
-                                    class="col-12 d-flex flex-column flex-md-row justify-content-center align-content-center mt-4 mb-0">
+                                    class="col-12 d-flex flex-column  justify-content-center align-content-center mt-4 mb-0">
                                     <button type="submit" class="modal-btn col-12  p-2 py-3" id="submit-form">Schedule a free
                                         pickup</button>
                                         
